--- a/neue-webseite/weitere-tools.html
+++ b/neue-webseite/weitere-tools.html
@@ -3,13 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weitere Tools - LieferMax</title>
+    <title>ShopWare & WooCommerce Integration - LieferMax</title>
     <meta name="description" content="Moderne Schnittstellen zwischen Ihrem Webshop (ShopWare, WooCommerce) und COPA Systeme.">
-    
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="assets/images/favicon.png">
-    <link rel="apple-touch-icon" href="assets/images/favicon.png">
-    
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
