--- a/contact.html
+++ b/contact.html
@@ -330,6 +330,27 @@
                 return;
             }
 
+            const errorClassList = ['border-red-500', 'ring-1', 'ring-red-200'];
+
+            const clearFieldErrors = function () {
+                const fields = form.querySelectorAll('input, textarea, select');
+                fields.forEach(function (field) {
+                    errorClassList.forEach(function (cls) {
+                        field.classList.remove(cls);
+                    });
+                });
+            };
+
+            const markFieldError = function (selector) {
+                const field = form.querySelector(selector);
+                if (!field) {
+                    return;
+                }
+                errorClassList.forEach(function (cls) {
+                    field.classList.add(cls);
+                });
+            };
+
             const setStatus = function (type, message) {
                 statusEl.classList.remove('hidden');
                 statusEl.classList.remove('bg-green-50', 'text-green-800', 'border', 'border-green-200');
@@ -344,8 +365,35 @@
                 statusEl.textContent = message;
             };
 
+            const setValidationErrors = function (errors) {
+                const header = 'Bitte überprüfe folgende Felder:';
+                statusEl.classList.remove('hidden');
+                statusEl.classList.remove('bg-green-50', 'text-green-800', 'border', 'border-green-200');
+                statusEl.classList.add('bg-red-50', 'text-red-800', 'border', 'border-red-200');
+
+                statusEl.textContent = '';
+                const title = document.createElement('div');
+                title.className = 'font-semibold';
+                title.textContent = header;
+
+                const list = document.createElement('ul');
+                list.className = 'mt-2 list-disc pl-5 space-y-1';
+
+                (errors || []).forEach(function (err) {
+                    const li = document.createElement('li');
+                    li.textContent = String(err);
+                    list.appendChild(li);
+                });
+
+                statusEl.appendChild(title);
+                statusEl.appendChild(list);
+            };
+
             form.addEventListener('submit', async function (e) {
                 e.preventDefault();
+
+                clearFieldErrors();
+                statusEl.classList.add('hidden');
 
                 const firstname = form.querySelector('input[name="firstname"]');
                 const lastname = form.querySelector('input[name="lastname"]');
@@ -379,8 +427,24 @@
                     }
 
                     if (!response.ok) {
-                        const message = payload && payload.message ? payload.message : 'Fehler beim Senden. Bitte versuchen Sie es erneut.';
-                        setStatus('error', message);
+                        if (payload && Array.isArray(payload.errors) && payload.errors.length > 0) {
+                            setValidationErrors(payload.errors);
+
+                            const joined = payload.errors.join(' ');
+                            if (joined.includes('Namen') || joined.includes('Name')) {
+                                markFieldError('input[name="firstname"]');
+                                markFieldError('input[name="lastname"]');
+                            }
+                            if (joined.includes('E-Mail')) {
+                                markFieldError('input[name="email"]');
+                            }
+                            if (joined.includes('Nachricht')) {
+                                markFieldError('textarea[name="message"]');
+                            }
+                        } else {
+                            const message = payload && payload.message ? payload.message : 'Fehler beim Senden. Bitte versuchen Sie es erneut.';
+                            setStatus('error', message);
+                        }
                         return;
                     }
 
